--- a/_layout/default.html
+++ b/_layout/default.html
@@ -15,9 +15,16 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>{{ site.title | default: site.github.repository_name }}</h1>
+        <h1><a href="/">{{ site.title | default: site.github.repository_name }}</a></h1>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
-
+        {% if site.data.conteudo %}
+          <p>
+            Conteúdo<br />
+            {% for item in site.data.conteudo %}
+              <a href="{{ item.url }}">{{ item.title }}</a><br />
+            {% endfor %}
+          </p>
+        {% endif %}
       </header>
       <section>
 
