--- a/_layout/padrao.html
+++ b/_layout/padrao.html
@@ -11,6 +11,9 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <title>
+        {{ site.title | default: site.github.repository_name }}
+    </title>
 </head>
 <body>
     <div class="wrapper">
