--- a/_layout/padrao.html
+++ b/_layout/padrao.html
@@ -12,13 +12,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <title>
-        {{ site.title | default: site.github.repository_name }}
+        {{ site.title }}
     </title>
 </head>
 <body>
     <div class="wrapper">
         <header>
-<!--            {{ site.title | default: site.github.repository_name }} -->
+            <h1>teste</h1>
             <h1><a href="/">SO</a></h1>
             <p>{{ site.description | default: site.github.project_tagline }}</p>
 
