--- a/_layout/default.html
+++ b/_layout/default.html
@@ -11,12 +11,12 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <title>{{ site.title | default: site.github.repository_name }}</title>
 </head>
 <body>
     <div class="wrapper">
         <header>
-<!--            {{ site.title | default: site.github.repository_name }} -->
-            <h1><a href="/">SO</a></h1>
+            <h1>{{ site.title | default: site.github.repository_name }}</h1>
             <p>{{ site.description | default: site.github.project_tagline }}</p>
 
             {% if site.data.conteudo %}
@@ -35,6 +35,7 @@
         </section>
         <footer>
             <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+            <p><small><a href="/">home</a> v1</small></p>
         </footer>
     </div>
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
