--- a/_layout/default.html
+++ b/_layout/default.html
@@ -34,7 +34,7 @@
 
         </section>
         <footer>
-            <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+            <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a> v1</small></p>
             <p><small><a href="/">home</a> v1</small></p>
         </footer>
     </div>
