correção do layout e adição de slides de escalonamento

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 
             {% if site.data.conteudo %}
             <p>
-                Conteúdo<br />
+                Links<br />
                 {% for item in site.data.conteudo %}
                 <a href="{{ item.url }}">{{ item.title }}</a><br />
                 {% endfor %}
