teste de layout

--- a/_layouts/defaultnew.html
+++ b/_layouts/defaultnew.html
@@ -26,7 +26,7 @@
             </p>
             {% endif %}
 
-            {% if site.data.conteudo %}
+            {% if site.data.conteudo_new %}
             <p>
                 {% for item in site.data.conteudo %}
                 <a href="{{ item.url }}">{{ item.title }}</a><br />
